[package]
name = "probability_visualizer"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
# all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[build-dependencies]
which = "*"

[dependencies]
statrs = { version = "*" }
egui = { version = "*", default-features = false }
# For image support:
egui_extras = { version = "*", features = ["svg"] }
# image = { version = "*", features = ["jpeg", "png"] }
eframe = { version = "0.31", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "wayland",       # To support Linux (and CI)
  "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui_plot = { version = "*" }
catppuccin-egui = { version = "*", default-features = false, features = [
  "egui31",
] }
log = "0.4.27"
# for iterating over enum
strum = { version = "*", features = ["derive"] }
strum_macros = "*"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"                                 # to access the DOM (to hide the loading text)
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# opt-level = 3 # fast and small wasm
opt-level = 'z'
lto = true


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 1
